@@ -1,14 +1,19 @@
+May 12, 2009 - chris 
+o fixed segmentation fault when using a Cursor to iterate over all keys
+    and the record parameter is NULL and compression is enabled, then
+    hamsterdb tried to compress the NULL record (thanks, Jiezg)
+
 Mar 01, 2009 - chris ---------------------------------------------------
                       release of hamsterdb-1.0.8
 
-Feb 28, 2009 - chris ---------------------------------------------------
+Feb 28, 2009 - chris 
 o fixed bug when shifting internal pages (during SMO of erase); extended
     keys were deleted although they were still referenced
 
 Feb 23, 2009 - chris ---------------------------------------------------
                       release of hamsterdb-1.0.7
 
-Feb 20, 2009 - chris ---------------------------------------------------
+Feb 20, 2009 - chris 
 o fixed endian conversion bug when opening a Database file, which was created
     on a little-endian system, some page addresses were broken
 
